# ifcview

./: .gitignore  README.md  pyproject.toml
ifcview/: main.py
ifcview/lib/: interactions.py  rendering.py  utilities.py
